Weird gap in mobile account menu fixed.

--- a/themes/finna2/less/global/navbar-bootstrap.less
+++ b/themes/finna2/less/global/navbar-bootstrap.less
@@ -343,7 +343,7 @@
   flex-direction: row;
   align-items: center;
   height: @navbar-height;
-  li.logoutOptions {
+  #logout {
     margin-right: 1em;
   }
 }
